--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Rosario:300,500" rel="stylesheet" />
     <link rel="stylesheet" href="css/fonts/Usually-font/Usually-font.css">
     <link rel="stylesheet" href="css/fonts/Uindbase Font 1/Uindbase Font 1.css">
+    <link rel="stylesheet" href="css/iconic-font.css">
+    <!-- STYLE -->
     <link rel="stylesheet" href="css/style.css">
 
     <title>advolatum</title>
 </head>
 <body>
+
+    <header class="header centered">
+        <div class="header-burger"><i class="icon-menu"></i></div>
+        <nav class="header-nav">
+
+            <div class="header-menu-wrapper">
+                <a class="header-nav__logo" href="index.html"><img src="img/svg/logo.svg" alt="logo" draggable="false"></a>
+                <ul class="header-nav__menu">
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Главная</a></li>
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Коллекции</a></li>
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">О нас</a></li>
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Контакты</a></li>
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Корзина</a></li>
+                </ul>
+            </div>
+
+            <div class="header-social">
+                <a href="https://www.instagram.com/" class="header-social__link link-reset hover-yellow"><i class="icon-inst"></i></a>
+                <a href="https://telegram.org/" class="header-social__link link-reset hover-yellow"><i class="icon-tg"></i></a>
+                <a href="https://vk.com/" class="header-social__link link-reset hover-yellow"><i class="icon-vk"></i></a>
+            </div>
+        </nav>
+        <div class="header-subnav">
+            <ul class="header-subnav__menu">
+                <li class="header-subnav__item"><a class="link-reset hover-yellow" href="#">Девушкам</a></li>
+                <li class="header-subnav__item"><a class="link-reset hover-yellow" href="#">Мужчинам</a></li>
+                <li class="header-subnav__item"><a class="link-reset hover-yellow" href="#">Унисекс</a></li>
+            </ul>
+        </div>
+    </header>
 
 </body>
 </html>
