--- a/index.html
+++ b/index.html
@@ -106,10 +106,25 @@
             
         </section>
 
+
     </main>
 
-    <footer>
-
+    <footer class="footer centered">
+        <div class="footer-wrapper">
+            <div class="footer__policy footer-box">
+                <h4 class="footer__policy-link"><a class="link-reset hover-yellow" href="#">политика конфиденциальности</a></h4>
+                <h4 class="footer__policy-link"><a class="link-reset hover-yellow" href="#">согласие на обработку персональных данных</a></h4>
+            </div>
+            <div class="footer__logo footer-box">
+                <img src="img/svg/logo.svg" alt="logo">
+            </div>
+            <div class="footer__social footer-box">
+                <a href="https://www.instagram.com/" class="footer-social__link link-reset hover-yellow"><i class="icon-inst"></i></a>
+                <a href="https://telegram.org/" class="footer-social__link link-reset hover-yellow"><i class="icon-tg"></i></a>
+                <a href="https://vk.com/" class="footer-social__link link-reset hover-yellow"><i class="icon-vk"></i></a>
+            </div>
+        </div>
+        <div class="footer__copyright"><span>2022 </span>GruboGovorya</div>
     </footer>
 
     <script src="js/jquery-3.6.1.min.js"></script>
