--- a/index.html
+++ b/index.html
@@ -115,69 +115,261 @@
             <div class="actual__slider actual-slider swiper centered">
                 <div class="actual-slider-wrapper swiper-wrapper">
                     <!-- 1 -->
-                    
                     <div class="actual-slider__slide actual-card swiper-slide">
-                        <div id="actual-card-photo-1" class="actual-card__photo">
-                            <img src="img/actual-photo2.jpg" alt="actual">
-                        </div>                            <h3 class="actual-card__name">Костюм Advolatum
-                            соцветие</h3>
-                        <div class="actual-card-buy-wrapper">
-                            <h3 class="actual-card__price">3751 ₴</h3>
-                            <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy hover-yellow">В корзину</h3></a>
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Костюм Advolatum
+                                    соцветие</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">4499 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Костюм Advolatum
+                                        соцветие</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
                     <!-- 2 -->
                     <div class="actual-slider__slide actual-card swiper-slide">
-                        <div id="actual-card-photo-1" class="actual-card__photo">
-                            <img src="img/actual-photo1.jpg" alt="actual">
-                        </div>
-                        <h3 class="actual-card__name">Костюм Advolatum
-                            соцветие</h3>
-                        <div class="actual-card-buy-wrapper">
-                            <h3 class="actual-card__price">3751 ₴</h3>
-                            <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy hover-yellow">В корзину</h3></a>
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo1.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Костюм Advolatum
+                                    радуга</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">2999 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Костюм Advolatum
+                                        радуга</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- 3 -->
                     <div class="actual-slider__slide actual-card swiper-slide">
-                        <div id="actual-card-photo-1" class="actual-card__photo">
-                            <img src="img/actual-photo1.jpg" alt="actual">
-                        </div>
-                        <h3 class="actual-card__name">Костюм Advolatum
-                            соцветие</h3>
-                        <div class="actual-card-buy-wrapper">
-                            <h3 class="actual-card__price">3751 ₴</h3>
-                            <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy hover-yellow">В корзину</h3></a>
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Штаны Advolatum
+                                    империум</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">2499 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Штаны Advolatum
+                                        империум</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- 4 -->
                     <div class="actual-slider__slide actual-card swiper-slide">
-                        <div id="actual-card-photo-1" class="actual-card__photo">
-                            <img src="img/actual-photo1.jpg" alt="actual">
-                        </div>
-                        <h3 class="actual-card__name">Костюм Advolatum
-                            соцветие</h3>
-                        <div class="actual-card-buy-wrapper">
-                            <h3 class="actual-card__price">3751 ₴</h3>
-                            <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy hover-yellow">В корзину</h3></a>
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Чокер Advolatum
+                                    непокорность</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">749 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Чокер Advolatum
+                                        непокорность</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- 5 -->
                     <div class="actual-slider__slide actual-card swiper-slide">
-                        <div id="actual-card-photo-1" class="actual-card__photo">
-                            <img src="img/actual-photo2.jpg" alt="actual">
-                        </div>
-                        <h3 class="actual-card__name">Костюм Advolatum
-                            соцветие</h3>
-                        <div class="actual-card-buy-wrapper">
-                            <h3 class="actual-card__price">3751 ₴</h3>
-                            <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Костюм Advolatum
+                                    имортал</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">3799 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Костюм Advolatum
+                                        имортал</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>   
+                    <!-- 6 -->
+                    <div class="actual-slider__slide actual-card swiper-slide">
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Юбка Advolatum
+                                    невинность</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">1299 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Юбка Advolatum
+                                        невинность</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 7 -->
+                    <div class="actual-slider__slide actual-card swiper-slide">
+                        <div class="actual-card-flip">
+                            <!-- FRONT -->
+                            <div class="actual-card-front">
+                                <div class="actual-card__photo">
+                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                </div>                            
+                                <h3 class="actual-card__name">Берцы Advolatum
+                                    панк</h3>
+                                <div class="actual-card-buy-wrapper">
+                                    <h3 class="actual-card__price">4899 ₴</h3>
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                </div>
+                            </div>
+
+                            <!-- BACK -->
+                            <div class="actual-card-back">
+                                <div class="actual-card__bg">
+                                    <h3 class="actual-card__name">Берцы Advolatum
+                                        панк</h3>
+                                    <h3 class="actual-card__back-text">Разработан и придуман
+                                        с учетом всех
+                                        требований комфорта
+                                        человека в городе подобный текст
+                                        описывающий конкретную модель</h3>
+                                </div>
+                                <div class="actual-card-back-wrapper">
+                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>  
             </div>
-            <a href="#" class="link-reset hover-yellow"><h3 class="actual__more centered">Смотреть больше</h3></a>
+            <div class="actual-more-wrapper">
+                <a href="#" class="link-reset hover-yellow"><h3 class="actual__more centered">Смотреть больше</h3></a>
+            </div>
+        </section>
+
+        <section class="contact centered">
+            <div class="contact-title-wrapper title-wrapper">
+                <h2 class="contact__title-bg title-bg">контакты</h2>
+                <h3 class="contact__title title">мы всегда на связи</h3>
+            </div>
+            <div class="contact-content-wrapper">
+                <div class="contact__map"><img src="img/map.jpg" alt=""></div>
+                <div class="contact__links">
+                    <a class="link-reset hover-yellow" href="tel:8(000)000-00-00">8(000)000-00-00</a>
+                    <a class="link-reset hover-yellow" href="mailto:info@advolatum.ru">info@advolatum.ru</a>
+                    <div class="contact__social">
+                        <a href="https://www.instagram.com/" class="footer-social__link link-reset hover-yellow"><i class="icon-inst"></i></a>
+                        <a href="https://telegram.org/" class="footer-social__link link-reset hover-yellow"><i class="icon-tg"></i></a>
+                        <a href="https://vk.com/" class="footer-social__link link-reset hover-yellow"><i class="icon-vk"></i></a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
