--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <i class="burger-menu__close icon-cross"></i>
         <div class="burger-menu-wrapper">
             <ul class="burger-menu__items">
-                <li class="burger-menu__item"><a class="link-reset hover-yellow" href="#">Главная</a></li>
+                <li class="burger-menu__item"><a class="link-reset hover-yellow" href="index.html">Главная</a></li>
                 <li class="burger-menu__item"><a class="link-reset hover-yellow" href="#">Коллекции</a></li>
-                <li class="burger-menu__item"><a class="link-reset hover-yellow" href="#">О нас</a></li>
+                <li class="burger-menu__item"><a class="link-reset hover-yellow" href="about-us.html">О нас</a></li>
                 <li class="burger-menu__item"><a class="link-reset hover-yellow" href="#">Контакты</a></li>
                 <li class="burger-menu__item"><a class="link-reset hover-yellow" href="#">Корзина</a></li>
             </ul>
@@ -45,9 +45,9 @@
             <div class="header-menu-wrapper">
                 <a class="header-nav__logo" href="index.html"><img src="img/svg/logo.svg" alt="logo" draggable="false"></a>
                 <ul class="header-nav__menu">
-                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Главная</a></li>
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="index.html">Главная</a></li>
                     <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Коллекции</a></li>
-                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">О нас</a></li>
+                    <li class="header-nav__item"><a class="link-reset hover-yellow" href="about-us.html">О нас</a></li>
                     <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Контакты</a></li>
                     <li class="header-nav__item"><a class="link-reset hover-yellow" href="#">Корзина</a></li>
                 </ul>
