--- a/about-us.html
+++ b/about-us.html
@@ -65,61 +65,52 @@
     </header>
 
     <main>
-        <div class="about-us">
-            <h3 class="about-us__title">о нас</h3>
-            <p class="about-us__text centered">Разнообразный и богатый опыт укрепление и 
-            развитие структуры в значительной степени 
-            обуславливает создание соответствующий условий 
-            активизации. С другой стороны начало повседневной 
-            работы по формированию позиции позволяет выполнять
-            важные задания по разработке существенных финансовых 
-            и административных условий. Задача организации, 
-            в особенности же новая модель организационной 
-            деятельности требуют определения и уточнения систем 
-            массового участия. Не следует, однако забывать, что 
-            сложившаяся структура организации требуют определения 
-            и уточнения существенных финансовых и административных 
-            условий. Повседневная практика показывает, что 
-            дальнейшее развитие различных форм деятельности требуют 
-            определения и уточнения форм развития.
-            Разнообразный и богатый опыт укрепление и развитие структуры 
-            в значительной степени обуславливает создание соответствующий 
-            условий активизации. С другой стороны начало повседневной работы 
-            по формированию позиции позволяет выполнять важные задания по 
-            разработке существенных финансовых и административных условий. 
-            Задача организации, в особенности же новая модель организационной 
-            деятельности требуют определения и уточнения систем массового участия. 
-            Не следует, однако забывать, что сложившаяся структура организации 
-            требуют определения и уточнения существенных финансовых и административных 
-            условий. Повседневная практика показывает, что дальнейшее развитие различных
-            форм деятельности требуют определения и уточнения форм развития.Разнообразный 
-            и богатый опыт укрепление и развитие структуры в значительной степени 
-            обуславливает создание соответствующий условий активизации. С другой стороны 
-            начало повседневной работы по формированию позиции позволяет выполнять важные 
-            задания по разработке существенных финансовых и административных условий. 
-            Задача организации, в особенности же новая модель организационной 
-            деятельности требуют определения и уточнения систем массового участия. 
-            Не следует, однако забывать, что сложившаяся структура организации требуют 
-            определения и уточнения существенных финансовых и административных условий. Повседневная 
-            практика показывает, что дальнейшее развитие различных форм деятельности требуют 
-            определения и уточнения форм развития.Разнообразный и богатый опыт укрепление и развитие 
-            структуры в значительной степени обуславливает создание соответствующий условий 
-            активизации. С другой стороны начало повседневной работы по формированию позиции 
-            позволяет выполнять важные задания по разработке существенных финансовых и 
-            административных условий. Задача организации, в особенности же новая модель 
-            организационной деятельности требуют определения и уточнения систем массового участия. 
-            Не следует, однако забывать, что сложившаяся структура организации требуют определения 
-            и уточнения существенных финансовых и административных условий. Повседневная практика показывает, 
-            что дальнейшее развитие различных форм деятельности требуют определения и уточнения форм развития.
-            Разнообразный и богатый опыт укрепление и развитие структуры в значительной степени обуславливает 
-            создание соответствующий условий активизации. С другой стороны начало повседневной работы по 
-            формированию позиции позволяет выполнять важные задания по разработке существенных финансовых 
-            и административных условий. Задача организации, в особенности же новая модель организационной 
-            деятельности требуют определения и уточнения систем массового участия. Не следует, однако 
-            забывать, что сложившаяся структура организации требуют определения и уточнения существенных
-            финансовых и административных условий. Повседневная практика показывает, что дальнейшее 
-            развитие различных форм деятельности требуют определения и уточнения форм развития.</p> 
+        <div class="about-us centered">
+            <div class="about-us__logo"><img class="centered" src="img/svg/logo.svg" alt="logo"></div>
+            <div class="about-us-title-wrapper title-wrapper">
+                <h2 class="about-us__title-bg title-bg">о нас</h2>
+                <h3 class="about-us__title title">о нас</h3>
+            </div>
+            <p class="about-us__text centered">
+                Разнообразный и богатый опыт укрепление и развитие 
+                структуры в значительной степени обуславливает 
+                создание соответствующий условий активизации. С 
+                другой стороны начало повседневной работы по формированию 
+                позиции позволяет выполнять важные задания по разработке 
+                существенных финансовых и административных условий. Задача 
+                организации, в особенности же новая модель организационной 
+                деятельности требуют определения и уточнения систем 
+                массового участия. Не следует, однако забывать, что 
+                сложившаяся структура организации требуют определения и 
+                уточнения существенных финансовых и административных условий. 
+                Повседневная практика показывает, что дальнейшее развитие 
+                различных форм деятельности требуют определения и уточнения 
+                форм развития.</p>
+            <div class="about-us__image-box centered">
+                <img src="img/actual-photo3.jpg" alt="ph">
+                <img src="img/actual-photo2.jpg" alt="ph">
+                <img src="img/actual-photo1.jpg" alt="ph">
+            </div>
         </div>
+
+        <section class="contact centered">
+            <div class="contact-title-wrapper title-wrapper">
+                <h2 class="contact__title-bg title-bg">контакты</h2>
+                <h3 class="contact__title title">мы всегда на связи</h3>
+            </div>
+            <div class="contact-content-wrapper">
+                <div class="contact__map"><img src="img/map.jpg" alt=""></div>
+                <div class="contact__links">
+                    <a class="link-reset hover-yellow" href="tel:8(000)000-00-00">8(000)000-00-00</a>
+                    <a class="link-reset hover-yellow" href="mailto:info@advolatum.ru">info@advolatum.ru</a>
+                    <div class="contact__social">
+                        <a href="https://www.instagram.com/" class="footer-social__link link-reset hover-yellow"><i class="icon-inst"></i></a>
+                        <a href="https://telegram.org/" class="footer-social__link link-reset hover-yellow"><i class="icon-tg"></i></a>
+                        <a href="https://vk.com/" class="footer-social__link link-reset hover-yellow"><i class="icon-vk"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer centered">
